Fix DCHECK() crash in ArcImeService.

It should use WMHelper::HasInstance() to check there is WMHelper
instance, but WMHelper::GetInstance() was used instead.

Bug: 911857
Change-Id: I46249edd757eff5364863365983be6bef905505c
Reviewed-on: https://chromium-review.googlesource.com/c/1365093
Reviewed-by: Tetsui Ohkubo <tetsui@chromium.org>
Commit-Queue: Yuichiro Hanada <yhanada@chromium.org>
Cr-Commit-Position: refs/heads/master@{#614285}
Former-commit-id: d6dec3971cf136c5f6bfd2fcb197b0da132d12fa